home overflow aos bug fixed

--- a/client/src/components/organism/home/index.css
+++ b/client/src/components/organism/home/index.css
@@ -17,6 +17,7 @@
     flex-direction: column;
     align-items:center;
     justify-content: flex-start;
+    overflow-x: hidden;
 }
 .home__inner__inner{
     width:100%;
@@ -26,8 +27,6 @@
     align-items:center;
     justify-content: center;
     overflow-x: hidden;
-    
-
 }
 .home__inner__section1{
     width:100%;
@@ -45,14 +44,14 @@
     display: flex;
     align-items: flex-end;
     justify-content: center;
-    background-size: 100% 100%;
+    background-size: cover;
     background-repeat: no-repeat;
     background-image:url('./../../assets/image/home_img/map11.svg');
 }
-.home__inner__section1__img{
+/* .home__inner__section1__img{
     width: 90rem;
     height:80%;
-}
+} */
 
 
 
@@ -123,7 +122,7 @@
 .home__inner__section2__display{
     width:100%;
     height:fit-content;
-    margin: auto;
+    overflow-x: hidden;
 }
 .loading__outer{
 	width:100%;
@@ -131,7 +130,6 @@
 	display: flex;
 	align-items: center;
 	justify-content: center;
-    margin: auto;
 }
 
 
@@ -142,6 +140,8 @@
 .home__inner__section3{
     width:90%;
     height:fit-content;
+    overflow-x: hidden;
+
 }
 .home__inner__section3__heading{
     width:100%;
@@ -243,6 +243,8 @@
     margin-bottom: 5rem;
     padding-top:2rem;
     padding-bottom: 2rem;
+    overflow-x: hidden;
+
 }
 .home__inner__section4__img{
     width:36px;
